r = run_command('python3', join_paths(SCRIPTS_DIR,'copyfile.py'), 
    '--input_file', join_paths(meson.current_source_dir(), 'pg_waterfall_sink.py'), '--output_file', 
    join_paths(meson.project_build_root(),'blocklib','pyqtgraph','python','gnuradio','pyqtgraph','numpy','pg_waterfall_sink.py'),
    check:true)
